# rnm-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: cli.rs  config.rs  error.rs  main.rs  manager.rs  utils.rs
